# Helm

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
src/: App.css  App.tsx  shortcuts.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fonts.rs  hookserver.rs  integrations.rs  lib.rs  notify.rs  pty.rs  store.rs
src/agents/: builtins.ts  engine.ts  extract.ts  hookEvents.ts  registry.ts  types.ts
src/commands/: actions.ts  filter.ts  keymap.ts  paneNav.ts  prefix.ts  registry.ts  types.ts
src/components/ApprovalPanel/: ApprovalPanel.css  ApprovalPanel.tsx
src/components/ChangedFilesPanel/: ChangedFilesPanel.css  ChangedFilesPanel.tsx
src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
src/components/IntegrationHint/: IntegrationHint.css  IntegrationHint.tsx
src/components/NotificationCenter/: NotificationCenter.css  NotificationCenter.tsx
src/components/PaneLabel/: PaneLabel.css  PaneLabel.tsx
src/components/SessionSidebar/: LauncherMenu.tsx  SessionItem.tsx  SessionSidebar.css  SessionSidebar.tsx  WorkspaceGroup.tsx
src/components/SettingsDialog/: SettingsDialog.css  SettingsDialog.tsx
src/components/SplitLayout/: SplitResizers.css  SplitResizers.tsx
src/components/Terminal/: Terminal.css  Terminal.tsx  osc52.ts
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/components/WhichKey/: WhichKey.css  WhichKey.tsx
src/focus/: focusUtils.ts  listNav.ts
src/i18n/: index.ts
src/i18n/translations/: en.ts  zh-TW.ts
src/ipc/: dialog.ts  fonts.ts  hooks.ts  integrations.ts  menu.ts  notify.ts  persist.ts  pty.ts  update.ts
src/store/: approvalNotify.ts  approvalSuppress.ts  fleet.ts  fontFamily.ts  language.ts  layout.ts  layoutTree.ts  notificationCenter.ts  notificationRouter.ts  notifications.ts  prefix.ts  scanState.ts  sessions.ts  settings.ts  sidebarProjection.ts  theme.ts  ui.ts  update.ts  workspaceGroups.ts  workspaces.ts
tests/: agent-engine.test.ts  agent-extract.test.ts  agent-hook-events.test.ts  agent-registry.test.ts  approval-notify.test.ts  approval-suppress.test.ts  command-filter.test.ts  fleet.test.ts  font-family.test.ts  i18n.test.ts  keymap.test.ts  layout-tree.test.ts  list-nav.test.ts  notification-center.test.ts  notification-router.test.ts  osc52.test.ts  pane-nav.test.ts  prefix.test.ts  scan-state.test.ts  sidebar-projection.test.ts  workspace-groups.test.ts
