[package]
name = "helm"
version = "0.4.1"
description = "Agent-aware terminal: detects CLI agents in each session and surfaces their state, approvals, and usage"
authors = ["Aries Chao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Tauri's recommended app-size profile: LTO + single codegen unit + strip cut
# several MB off the binary; panic = "abort" drops unwinding tables (panics
# terminate instead of unwinding). Release builds get slower; dev unaffected.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
fontdb = "0.23"
# Localhost receiver for CLI agent hook events (see src/hookserver.rs).
tiny_http = "0.12"

# Desktop notifications with click-to-activate callbacks. The official
# tauri-plugin-notification cannot detect desktop clicks, so each platform uses
# its native backend (see src/notify.rs).
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

